# baller

./: .gitignore  Mounting.mov  README.md  pose.yml  setup.cfg
arduino/: hubert.ino
arduino/calibration/: calibration.ino
arduino/hubert/: hubert.ino
arduino/sound/: sound.ino
baller/communication/: hubert.py  interactive.py  model.py  slider.py
baller/finite_state_machine/: fsm.py
baller/image_analysis/: calibrate.py  gestures.py  image_analysis.py  pixel_coordinates_to_spatial.py
baller/inverse_kinematics/: ik.py
baller/model/: hubert.py  model.py  pose_model.py  slider.py
baller/scripts/: interactive.py  main.py  offline.py
baller/trajectory_solver/: trajectory_solver.py
baller/utils/hubert/: constants.py  forward_kinematics.py
baller/utils/math/: matrix.py
tests/test_communication/: test_read_from_arduino.py  test_servo.py  test_servo_mappings.py  test_write_to_arduino.py
tests/test_inverse_kinematics/: test_ik.py
tests/test_trajectory_solver/: test_trajectory.py
tests/test_utils/test_hubert/: test_forward_kinematics.py
videos/: targets_on_white_wall.mkv
