[metadata]
name = BALLER
version = 0.0.1
license = "MIT License"
description = ""
long_description = file: README.md
author = "Simon Paulsson, Filip Sterner, Vincent Udén"

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    opencv-python
    matplotlib
    pytest
    pyserial
    scipy
    pyyaml

[options.entry_points]
console_scripts =
    baller = baller.scripts.main:main